--- a/btvn-4/detail6.html
+++ b/btvn-4/detail6.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Document</title>
+  <title>Thiết kế UI/UX</title>
   <link rel="stylesheet" href="./assets/css/style1.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="stylesheet" href="./lib/fontawesome-free-6.5.1-web/css/all.min.css">
