--- a/btvn-4/index.html
+++ b/btvn-4/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="stylesheet" href="./lib/fontawesome-free-6.5.1-web/css/all.min.css">
-  <title>Document</title>
+  <title>Trang chủ </title>
 </head>
 <style>
   
