--- a/btvn-8-2/index.html
+++ b/btvn-8-2/index.html
@@ -27,9 +27,10 @@
 <div class="nd1">
   <div class="tu">Bắt đầu nào </div>
   <div class="otext">
-    <input type="text" id="inputField" placeholder="Ten doanh nghiep">
-    
+    <input type="text" id="inputField" placeholder=" " required>
+    <label for="inputField">Ten doanh nghiep</label>
   </div>
+  <div class="">Số lượng nhân viên, bao gồm cả bạn</div>
   <div class="radi">
     <input type="radio" >
     <a>Chi co ban</a>
