--- a/buoi5/index.html
+++ b/buoi5/index.html
@@ -25,6 +25,9 @@
 
     </div>
   </div>
- 
+  <div class="otext">
+    <input type="text" id="inputField" placeholder=" " required>
+    <label for="inputField">Ten doanh nghiep</label>
+  </div>
 </body>
 </html>
