--- a/btvn-8/index.html
+++ b/btvn-8/index.html
@@ -33,11 +33,11 @@
           <div class="int">
             <a href="#">Quen mat khau?</a>
           </div>
-          <div class="line1">
+          <div class="duong">
             
           </div>
           <div class="in1-1">
-            <button class="">Tao tai khoan moi</button>
+            <a class="">Tao tai khoan moi</a>
           </div>
         </div>
         <div class="m">
