--- a/btvn-11/index.html
+++ b/btvn-11/index.html
@@ -4,15 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Function</title>
-  <link rel="stylesheet" href="./aset/css/style.css">
+  <title>Document</title>
 </head>
 <body>
-
-  <div class="img-pro">
-    <img src="./aset/img/19.jpg">
-  </div>
-  <div class="n"></div>
   <script src="./aset/js/main.js"></script>
 </body>
 </html>
