--- a/buoi-10/index.html
+++ b/buoi-10/index.html
@@ -9,10 +9,32 @@
 </head>
 <body>
 
-  <div class="img-pro">
+  <!-- <div class="img-pro">
     <img src="./aset/img/19.jpg">
   </div>
-  <div class="n"></div>
+  <div class="n"></div> -->
+
+  <div class="full">
+    <!-- phan1 -->
+    <div class="phan1">
+<div class="header">
+  <!-- top-header -->
+  <div class="top-header">
+<div class="icon">
+  <i class="fa-solid fa-magnifying-glass"></i>
+</div>
+<!-- logo -->
+<div class="logo">
+  <div class="group1">icon1</div>
+  <div class="Coral">CORAL</div>
+  <div class="group2">icon2</div>
+  
+</div>
+</div>
+</div>
+</div>
+
+</div>
   <script src="./aset/js/main.js"></script>
 </body>
 </html>
