--- a/btvn13-2/index.html
+++ b/btvn13-2/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./asset/js/main.js"></script>
+  <script src="./asset/js/main.js">
+    
+  </script>
 </body>
 </html>
